src/main/terraform/03_Kubernetes_EXT/module-02-apicurio-studio/remote_resource_m02_apicurio_registry/apicurio/k8/apicurio-studio-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    module: apicurio-studio-api
  name: apicurio-studio-api
  namespace: apicurio
spec:
  replicas: 1
  selector:
    matchLabels:
      module: apicurio-studio-api
  template:
    metadata:
      labels:
        module: apicurio-studio-api
    spec:
      containers:
      - env:
#        - name: APICURIO_LOGGING_LEVEL
#          value: debug
        - name: APICURIO_UI_FEATURE_ASYNCAPI
          value: "true"
        - name: APICURIO_DB_CONNECTION_URL
          valueFrom:
            configMapKeyRef:
              name: apicurio-configmap
              key: apicurio-db-connection-url     
        - name: APICURIO_DB_DRIVER_NAME
          value: postgresql
        - name: APICURIO_DB_INITIALIZE
          value: "true"
        - name: APICURIO_DB_PASSWORD
          valueFrom:
            secretKeyRef:
              name: apicurio-secret
              key: db-password
        - name: APICURIO_DB_TYPE
          value: postgresql9
        - name: APICURIO_DB_USER_NAME
          valueFrom:
            secretKeyRef:
              name: apicurio-secret
              key: db-user
        - name: APICURIO_MICROCKS_API_URL
          valueFrom:
            configMapKeyRef:
              name: apicurio-configmap
              key: apicurio-microcks-api-url
        - name: APICURIO_MICROCKS_CLIENT_ID
          valueFrom:
            configMapKeyRef:
              name: apicurio-configmap
              key: apicurio-microcks-client-id
        - name: APICURIO_MICROCKS_CLIENT_SECRET
          valueFrom:
            secretKeyRef:
              name: apicurio-secret
              key: apicurio-microcks-client-secret
        - name: APICURIO_KC_AUTH_URL
          valueFrom:
            configMapKeyRef:
              name: apicurio-configmap
              key: keycloak-url
        - name: APICURIO_KC_REALM
          valueFrom:
            configMapKeyRef:
              name: apicurio-configmap
              key: apicurio-kc-realm          
        - name: APICURIO_KC_CLIENT_ID
          valueFrom:
            configMapKeyRef:
              name: apicurio-configmap
              key: apicurio-kc-client-id
        - name: APICURIO_KC_CLIENT_SECRET
          valueFrom:
            secretKeyRef:
              name: apicurio-secret
              key: apicurio-kc-client-secret
        - name: APICURIO_SHARE_FOR_EVERYONE
          valueFrom:
            configMapKeyRef:
              name: apicurio-configmap
              key: apicurio-ui-feature-share-with-everyone
        - name: JAVA_TOOL_OPTIONS
          value: -Djava.net.preferIPv4Stack=true
        image: 'apicurio/apicurio-studio-api'
        name: apicurio-studio-api
        resources:
          requests:
            memory: "1Gi"
            cpu: "250m"
          limits:
            memory: "2Gi"
            cpu: "500m"
        ports:
        - containerPort: 8080
      restartPolicy: Always
      volumes:
      - name: apicurio-secret
        secret:
          secretName: apicurio-secret
      - name: apicurio-configmap
        configMap:
          name: apicurio-cofngimap
