src/main/terraform/03_Kubernetes_EXT/module-02-apicurio-studio/remote_resource_m02_apicurio_registry/apicurio/k8/apicurio-studio-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    module: apicurio-studio-ui
  name: apicurio-studio-ui
  namespace: apicurio
spec:
  replicas: 1
  strategy: {}
  selector:
    matchLabels:
      module: apicurio-studio-ui
  template:
    metadata:
      labels:
        module: apicurio-studio-ui
    spec:
      containers:
      - env:
#        - name: APICURIO_LOGGING_LEVEL
#          value: debug
        - name: APICURIO_UI_FEATURE_ASYNCAPI
          value: "true"
        - name: APICURIO_KC_AUTH_URL
          valueFrom:
            configMapKeyRef:
              name: apicurio-configmap
              key: keycloak-url
        - name: APICURIO_KC_REALM
          valueFrom:
            configMapKeyRef:
              name: apicurio-configmap
              key: apicurio-kc-realm          
        - name: APICURIO_KC_CLIENT_ID
          valueFrom:
            configMapKeyRef:
              name: apicurio-configmap
              key: apicurio-kc-client-id
        - name: APICURIO_KC_CLIENT_SECRET
          valueFrom:
            secretKeyRef:
              name: apicurio-secret
              key: apicurio-kc-client-secret
        - name: APICURIO_UI_FEATURE_MICROCKS
          valueFrom:
            configMapKeyRef:
              name: apicurio-configmap
              key: apicurio-ui-feature-microcks          
        - name: APICURIO_UI_FEATURE_SHARE_WITH_EVERYONE
          valueFrom:
            configMapKeyRef:
              name: apicurio-configmap
              key: apicurio-ui-feature-share-with-everyone          
        - name: APICURIO_UI_LOGOUT_REDIRECT_URI
          valueFrom:
            configMapKeyRef:
              name: apicurio-configmap
              key: apicurio-ui-logout-redirect-uri
        - name: APICURIO_UI_HUB_API_URL
          valueFrom:
            configMapKeyRef:
              name: apicurio-configmap
              key: apicurio-ui-hub-api-url
        - name: APICURIO_UI_EDITING_URL
          valueFrom:
            configMapKeyRef:
              name: apicurio-configmap
              key: apicurio-ui-editing-url
        - name: JAVA_TOOL_OPTIONS
          value: -Djava.net.preferIPv4Stack=true
        - name: APICURIO_UI_VALIDATION_CHANNELNAME_REGEXP
          value: '{([^{}\/]*(\{[a-zA-Z_][0-9a-zA-Z_]*\})?)+'
        - name: APICURIO_MICROCKS_API_URL
          valueFrom:
            configMapKeyRef:
              name: apicurio-configmap
              key: apicurio-microcks-api-url
        - name: APICURIO_MICROCKS_CLIENT_ID
          valueFrom:
            configMapKeyRef:
              name: apicurio-configmap
              key: apicurio-microcks-client-id
        - name: APICURIO_MICROCKS_CLIENT_SECRET
          valueFrom:
            secretKeyRef:
              name: apicurio-secret
              key: apicurio-microcks-client-secret
        image: 'apicurio/apicurio-studio-ui'
        imagePullPolicy: Always
        name: apicurio-studio-ui
        resources:
          requests:
            memory: "1Gi"
            cpu: "250m"
          limits:
            memory: "2Gi"
            cpu: "500m"
        ports:
        - containerPort: 8080
      restartPolicy: Always
