src/main/terraform/03_Kubernetes_EXT/module-02-apicurio-studio/remote_resource_m02_apicurio_registry/apicurio/k8/apicurio-studio-ws-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    module: apicurio-studio-ws
  name: apicurio-studio-ws
  namespace: apicurio
spec:
  replicas: 1
  selector:
    matchLabels:
      module: apicurio-studio-ws
  template:
    metadata:
      labels:
        module: apicurio-studio-ws
    spec:
      containers:
      - env:
#        - name: APICURIO_LOGGING_LEVEL
#          value: debug
        - name: APICURIO_UI_FEATURE_ASYNCAPI
          value: "true"
        - name: APICURIO_DB_CONNECTION_URL
          valueFrom:
            configMapKeyRef:
              name: apicurio-configmap
              key: apicurio-db-connection-url
        - name: APICURIO_DB_DRIVER_NAME
          value: postgresql
        - name: APICURIO_DB_INITIALIZE
          value: "false"
        - name: APICURIO_DB_PASSWORD
          valueFrom:
            secretKeyRef:
              name: apicurio-secret
              key: db-password
        - name: APICURIO_DB_TYPE
          value: postgresql9
        - name: APICURIO_DB_USER_NAME
          valueFrom:
            secretKeyRef:
              name: apicurio-secret
              key: db-user
        - name: APICURIO_SHARE_FOR_EVERYONE
          valueFrom:
            configMapKeyRef:
              name: apicurio-configmap
              key: apicurio-ui-feature-share-with-everyone
        - name: JAVA_TOOL_OPTIONS
          value: -Djava.net.preferIPv4Stack=true
        image: 'apicurio/apicurio-studio-ws'
        name: apicurio-studio-ws
        resources:
          requests:
            memory: "1Gi"
            cpu: "250m"
          limits:
            memory: "2Gi"
            cpu: "500m"
        ports:
        - containerPort: 8080
      restartPolicy: Always
