src/main/terraform/03_Kubernetes_EXT/module-02-apicurio-studio/remote_resource_m02_apicurio_registry/apicurio/k8/apicurio-studio-services.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    module: apicurio-studio-api
  name: apicurio-studio-api
  namespace: apicurio
spec:
  type: NodePort
  ports:
  - name: "8091"
    port: 8091
    targetPort: 8080
    nodePort: 31000
  selector:
    module: apicurio-studio-api
---
apiVersion: v1
kind: Service
metadata:
  labels:
    module: apicurio-studio-ui
  name: apicurio-studio-ui
  namespace: apicurio
spec:
  type: NodePort
  ports:
  - name: "8093"
    port: 8093
    targetPort: 8080
    nodePort: 31001
  selector:
    module: apicurio-studio-ui
---
apiVersion: v1
kind: Service
metadata:
  labels:
    module: apicurio-studio-ws
  name: apicurio-studio-ws
  namespace: apicurio
spec:
  type: NodePort
  ports:
  - name: "8092"
    port: 8092
    targetPort: 8080
    protocol: TCP
    nodePort: 31002
  selector:
    module: apicurio-studio-ws
