src/main/terraform/03_Kubernetes_EXT/module-02-apicurio-studio/remote_resource_m02_apicurio_registry/apicurio/k8/apicurio-studio-ingresses.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: apicurio-studio-api
  namespace: apicurio
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  labels:
    module: apicurio-studio-api
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: "apicurio-studio-api"
                port:
                  number: 8091
            path: /studio-api/?(.*)
            pathType: Prefix

---

kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: apicurio-studio-ui
  namespace: apicurio
  annotations:
  labels:
    module: apicurio-studio-ui
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: "apicurio-studio-ui"
                port:
                  number: 8093
            path: /
            pathType: Prefix
---

kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: apicurio-studio-ws
  namespace: apicurio
  annotations:
  labels:
    module: apicurio-studio-ws
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: "apicurio-studio-ws"
            port:
              number: 8092
        path: /designs
        pathType: Prefix
